--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
-/coverage
+# Vercel
+.vercel
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Local .env files
+.env*.local
+.env
 
-# vercel
-.vercel
+# Prisma (if you store your SQLite DB in the project, otherwise adjust)
+# prisma/dev.db
+# prisma/dev.db-journal
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Turbopack
+.turbo/
+
+# IDE/Editor specific
+.vscode/
+*.swp
